viya/sas-bases/overlays/network/ingress/components/sas-data-mining-services/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /dataMining/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining
    sas.com/admin: namespace
  name: sas-data-mining
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-data-mining
          servicePort: 80
        path: /dataMining

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /dataMiningWarehouse/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-warehouse
    sas.com/admin: namespace
  name: sas-data-mining-warehouse
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-data-mining-warehouse
          servicePort: 80
        path: /dataMiningWarehouse

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /mlPipelineAutomation/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-ml-pipeline-automation
    sas.com/admin: namespace
  name: sas-ml-pipeline-automation
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-ml-pipeline-automation
          servicePort: 80
        path: /mlPipelineAutomation
